--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorLogin"
-    tools:context="io.github.lucasx95.dino.LoginActivity">
+    tools:context="br.unicamp.ic.timeverde.dino.LoginActivity">
 
     <ImageView
         android:id="@+id/ic_dino"
