--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,50 +1,50 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorLogin"
-    tools:context="br.unicamp.ic.timeverde.dino.LoginActivity">
+    android:orientation="vertical"
+    tools:context=".presentation.activity.LoginActivity">
 
-    <ImageView
-        android:id="@+id/ic_dino"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/dino"
-        android:layout_above="@+id/et_login"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dp" />
+        android:orientation="vertical"
+        android:layout_gravity="center">
 
+        <ImageView
+            android:id="@+id/login_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dino"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="40dp" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="250dp"
-        android:maxLength="30"
-        android:singleLine="true"
-        android:hint="@string/type_user"
-        android:id="@id/et_login"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        <EditText
+            android:id="@+id/login_user_email_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="250dp"
+            android:maxLength="30"
+            android:singleLine="true"
+            android:hint="@string/type_user" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="250dp"
-        android:hint="@string/type_password"
-        android:inputType="textPassword"
-        android:id="@+id/et_password"
-        android:layout_below="@id/et_login"
-        android:layout_centerHorizontal="true" />
+        <EditText
+            android:id="@+id/login_user_password_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="250dp"
+            android:hint="@string/type_password"
+            android:inputType="textPassword" />
 
-    <Button
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:text="@string/enter"
-        android:textAllCaps="true"
-        android:id="@+id/button"
-        android:layout_below="@id/et_password"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="33dp" />
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:text="@string/enter"
+            android:textAllCaps="true"
+            android:layout_marginTop="33dp" />
 
+    </LinearLayout>
 
-</RelativeLayout>
+</FrameLayout>
