--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     // Cores comuns no app
     <color name="colorPrimaryLight">#BBDEFB</color>
-    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimary">#1E88E5</color>
     <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#FF5722</color>
     <color name="colorPrimaryText">#212121</color>
