--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#727272</color>
     <color name="colorTextIcon">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="colorDivider">#B6B6B6</color>
 
     // Cor tela de login
