--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,5 +25,26 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CardTitle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">40dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">right</item>
+        <item name="android:layout_marginRight">15sp</item>
+    </style>
 
+    <style name="LightIconRoomCard">
+        <item name="android:layout_width">35sp</item>
+        <item name="android:layout_height">35sp</item>
+        <item name="android:layout_margin">5sp</item>
+    </style>
+
+    <style name="LightTextRoomCard">
+        <item name="android:textSize">20sp</item>
+        <item name="android:gravity">bottom|left</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
