--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,8 @@
     <color name="tabAccent">#ECEAE8</color>
     <color name="tabTextColor">#11548D</color>
 
+    // Cor de texto dos items
+    <color name="colorDeviceItemName">#4D4D4D</color>
+    <color name="colorDeviceItemDivider">#D9D9D9</color>
     <color name="black_overlay">#66000000</color>
 </resources>
