--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,7 @@
             android:id="@+id/login_button"
             android:layout_width="230dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="@string/enter"
             android:textAllCaps="true"
             android:layout_marginTop="33dp" />
