--- a/app/src/main/res/layout/list_item_device_fragment.xml
+++ b/app/src/main/res/layout/list_item_device_fragment.xml
@@ -3,6 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:background="?android:attr/selectableItemBackground"
               android:padding="15dp">
     <TextView
         android:id="@+id/header_device_list_item"
