--- a/app/src/main/res/layout/header_nav_drawer.xml
+++ b/app/src/main/res/layout/header_nav_drawer.xml
@@ -7,11 +7,11 @@
               android:orientation="vertical"
               android:gravity="bottom">
 
-    <ImageView
-        android:id="@+id/nav_drawer_profile_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/nav_drawer_photo_placeholder"/>
+    <!--<ImageView-->
+        <!--android:id="@+id/nav_drawer_profile_picture"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@drawable/nav_drawer_photo_placeholder"/>-->
 
     <TextView
         android:id="@+id/nav_drawer_profile_email"
