--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabGravity="fill"
-                app:tabIndicatorColor="@color/tabAccent"
+                app:tabIndicatorColor="@color/white"
                 app:tabMode="fixed"
                 app:tabTextColor="@color/tabTextColor"/>
         </android.support.design.widget.AppBarLayout>
