--- a/app/src/main/res/layout/fragment_macro.xml
+++ b/app/src/main/res/layout/fragment_macro.xml
@@ -8,6 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="MACRO FRAGMENT"/>
+        android:gravity="center"
+        android:text="Novas funcionalidades serão adicionadas na próxima atualização. Aguarde."/>
 
 </FrameLayout>
