--- a/app/src/main/res/layout/list_item_device_fragment.xml
+++ b/app/src/main/res/layout/list_item_device_fragment.xml
@@ -12,8 +12,7 @@
         android:textSize="@dimen/font_size_subheading"
         android:textColor="@color/colorPrimary"
         android:paddingBottom="15dp"
-        android:visibility="gone"
-        android:text="LÂMPADAS"/>
+        android:visibility="gone"/>
 
     <LinearLayout
         android:layout_width="match_parent"
