--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -9,14 +9,14 @@
             android:icon="@drawable/nav_drawer_home"
             android:title="@string/nav_drawer_home_icon" />
 
-        <item
-            android:id="@+id/nav_drawer_account_item"
-            android:icon="@drawable/nav_drawer_account"
-            android:title="@string/nav_drawer_account_icon" />
-        <item
-            android:id="@+id/nav_drawer_accounts_item"
-            android:icon="@drawable/nav_drawer_accounts"
-            android:title="@string/nav_drawer_accounts_icon" />
+        <!--<item-->
+            <!--android:id="@+id/nav_drawer_account_item"-->
+            <!--android:icon="@drawable/nav_drawer_account"-->
+            <!--android:title="@string/nav_drawer_account_icon" />-->
+        <!--<item-->
+            <!--android:id="@+id/nav_drawer_accounts_item"-->
+            <!--android:icon="@drawable/nav_drawer_accounts"-->
+            <!--android:title="@string/nav_drawer_accounts_icon" />-->
         <item
             android:id="@+id/nav_drawer_logout_item"
             android:icon="@drawable/nav_drawer_logout"
