--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,7 @@
     </style>
 
     <style name="FullscreenTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="android:windowBackground">@null</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorButtonNormal">@color/colorLoginButton</item>
         <item name="colorAccent">@color/colorLoginDivider
         </item>
@@ -21,9 +20,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="LightTextRoomCard">
         <item name="android:textSize">15sp</item>
@@ -32,5 +31,10 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="MultiChoiceShare" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorControlNormal">@color/black_overlay</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 </resources>
