--- a/app/src/main/res/layout/list_item_macro_fragment.xml
+++ b/app/src/main/res/layout/list_item_macro_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_width="match_parent"
-                                    android:layout_height="180dp"
+                                    android:layout_height="?android:attr/listPreferredItemHeight"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     app:cardCornerRadius="2dp"
                                     app:cardElevation="3dp"
@@ -10,22 +10,34 @@
                                     android:layout_marginTop="4dp"
                                     android:layout_marginBottom="4dp">
 
-    <RelativeLayout android:layout_width="match_parent"
+    <LinearLayout android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                  android:orientation="horizontal"
+                  android:padding="8dp"
                     android:background="@drawable/shape_macro_item_background"
                     android:foreground="?android:attr/selectableItemBackground">
 
         <TextView
             android:id="@+id/macro_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:gravity="center"
             android:text="Quarto casal"
+            android:layout_gravity="center_vertical"
             android:textAllCaps="true"
-            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="@dimen/font_size_subheading"/>
+
+        <Button
+            android:id="@+id/macro_activate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|left"
+            android:text="ATIVAR"
             android:textColor="@color/white"
-            android:textSize="30sp"/>
-    </RelativeLayout>
+            />
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
